--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <section id="warum-hakaj" class="container">
             <div class="about-grid">
                 <div class="about-grid__image-wrapper animate-in">
-                    <img src="assets/img/kuitim-hakaj.png" alt="Kuitim Hakaj, Inhaber von Hakaj Gartenbau" class="about-grid__image">
+                    <img src="assets/img/uber-mich.jpg" alt="Kuitim Hakaj, Inhaber von Hakaj Gartenbau" class="about-grid__image">
                 </div>
                 <div class="about-grid__text-content animate-in">
                     <h2 class="section-title--left">Ein Partner, auf den Sie bauen können.</h2>
@@ -136,11 +136,11 @@
             <div class="swiper mySwiper animate-in">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide" data-title="Neuanlage einer Terrasse aus Naturstein"><img src="assets/img/projekt-1.png" alt="Neuanlage einer Terrasse aus Naturstein"></div>
-                    <div class="swiper-slide" data-title="Moderner Garten mit Hochbeeten und Rollrasen"><img src="assets/img/projekt-1.png" alt="Moderner Garten mit Hochbeeten und Rollrasen"></div>
-                    <div class="swiper-slide" data-title="Pflasterarbeiten an einer Garageneinfahrt"><img src="assets/img/projekt-1.png" alt="Pflasterarbeiten an einer Garageneinfahrt"></div>
+                    <div class="swiper-slide" data-title="Moderner Garten mit Hochbeeten und Rollrasen"><img src="assets/img/projekt-2.jpg" alt="Moderner Garten mit Hochbeeten und Rollrasen"></div>
+                    <div class="swiper-slide" data-title="Pflasterarbeiten an einer Garageneinfahrt"><img src="assets/img/projekt-3.jpg" alt="Pflasterarbeiten an einer Garageneinfahrt"></div>
                     <div class="swiper-slide" data-title="Fachgerechter Baumschnitt an einer alten Eiche"><img src="assets/img/projekt-1.png" alt="Fachgerechter Baumschnitt an einer alten Eiche"></div>
-                    <div class="swiper-slide" data-title="Aufbau eines Sichtschutzzauns aus Holz"><img src="assets/img/projekt-1.png" alt="Aufbau eines Sichtschutzzauns aus Holz"></div>
-                    <div class="swiper-slide" data-title="Gestalteter Vorgarten mit Stein- und Pflanzenkombination"><img src="assets/img/projekt-1.png" alt="Gestalteter Vorgarten mit Stein- und Pflanzenkombination"></div>
+                    <div class="swiper-slide" data-title="Aufbau eines Sichtschutzzauns aus Holz"><img src="assets/img/projekt-2.jpg" alt="Aufbau eines Sichtschutzzauns aus Holz"></div>
+                    <div class="swiper-slide" data-title="Gestalteter Vorgarten mit Stein- und Pflanzenkombination"><img src="assets/img/projekt-3.jpg" alt="Gestalteter Vorgarten mit Stein- und Pflanzenkombination"></div>
                 </div>
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
