Projekte-Sektion erweitert und Design verfeinert

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Kuitim Hakaj | Premium Garten- & Landschaftsbau in Giengen</title>
+    <title>Kuitim Hakaj | Garten- & Landschaftsbau in Giengen</title>
     <meta name="description" content="Exklusive Gartengestaltung, präzise Pflasterarbeiten und nachhaltige Gartenpflege. Kuitim Hakaj ist Ihr Experte für die Realisierung anspruchsvoller Gartenträume in Giengen und Umgebung. Fordern Sie jetzt Ihr Erstgespräch an.">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -41,7 +41,7 @@
             <div class="hero__video-background">
                 </div>
             <div class="hero__content">
-                <h1 class="animate-in">Ihre Vision. Unser Handwerk.</h1>
+                <h1 class="animate-in">Garten- & Landschaftsbau in Giengen</h1>
                 <p class="animate-in">Wir realisieren anspruchsvolle Gärten in Giengen, die Ästhetik und Funktion perfekt vereinen. Geben Sie Ihrem Grundstück den Wert, den es verdient.</p>
                 <div class="hero__buttons animate-in">
                     <a href="#kontakt" class="button button--primary">Kostenloses Erstgespräch</a>
@@ -132,19 +132,30 @@
         <section id="projekte">
             <div class="container">
                  <h2 class="section-title animate-in">Realisierte Projekte</h2>
+                 <p class="projekte-intro animate-in">
+                    Jeder Garten ist ein Unikat. Hier sehen Sie eine Auswahl unserer Arbeiten, die zeigen, wie wir individuelle Kundenvisionen mit handwerklicher Präzision und Liebe zum Detail umsetzen. Lassen Sie sich inspirieren.
+                 </p>
             </div>
-            <div class="swiper mySwiper animate-in">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide" data-title="Neuanlage einer Terrasse aus Naturstein"><img src="assets/img/projekt-1.png" alt="Neuanlage einer Terrasse aus Naturstein"></div>
-                    <div class="swiper-slide" data-title="Moderner Garten mit Hochbeeten und Rollrasen"><img src="assets/img/projekt-2.jpg" alt="Moderner Garten mit Hochbeeten und Rollrasen"></div>
-                    <div class="swiper-slide" data-title="Pflasterarbeiten an einer Garageneinfahrt"><img src="assets/img/projekt-3.jpg" alt="Pflasterarbeiten an einer Garageneinfahrt"></div>
-                    <div class="swiper-slide" data-title="Fachgerechter Baumschnitt an einer alten Eiche"><img src="assets/img/projekt-1.png" alt="Fachgerechter Baumschnitt an einer alten Eiche"></div>
-                    <div class="swiper-slide" data-title="Aufbau eines Sichtschutzzauns aus Holz"><img src="assets/img/projekt-2.jpg" alt="Aufbau eines Sichtschutzzauns aus Holz"></div>
-                    <div class="swiper-slide" data-title="Gestalteter Vorgarten mit Stein- und Pflanzenkombination"><img src="assets/img/projekt-3.jpg" alt="Gestalteter Vorgarten mit Stein- und Pflanzenkombination"></div>
+
+            <div class="swiper-container-wrapper animate-in">
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide" data-title="Neuanlage einer Terrasse aus Naturstein"><img src="assets/img/projekt-1.png" alt="Neuanlage einer Terrasse aus Naturstein"></div>
+                        <div class="swiper-slide" data-title="Moderner Garten mit Hochbeeten und Rollrasen"><img src="assets/img/projekt-2.jpg" alt="Moderner Garten mit Hochbeeten und Rollrasen"></div>
+                        <div class="swiper-slide" data-title="Pflasterarbeiten an einer Garageneinfahrt"><img src="assets/img/projekt-3.jpg" alt="Pflasterarbeiten an einer Garageneinfahrt"></div>
+                        <div class="swiper-slide" data-title="Fachgerechter Baumschnitt an einer alten Eiche"><img src="assets/img/projekt-1.png" alt="Fachgerechter Baumschnitt an einer alten Eiche"></div>
+                        <div class="swiper-slide" data-title="Aufbau eines Sichtschutzzauns aus Holz"><img src="assets/img/projekt-2.jpg" alt="Aufbau eines Sichtschutzzauns aus Holz"></div>
+                        <div class="swiper-slide" data-title="Gestalteter Vorgarten mit Stein- und Pflanzenkombination"><img src="assets/img/projekt-3.jpg" alt="Gestalteter Vorgarten mit Stein- und Pflanzenkombination"></div>
+                    </div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-pagination"></div>
                 </div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-pagination"></div>
+                <div class="swiper-slide-title"></div>
+            </div>
+
+            <div class="projekte-cta animate-in">
+                <a href="#kontakt" class="button button--primary">Ihre Projektidee besprechen</a>
             </div>
         </section>
 
